--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "1.0.0",
   "description": "A torrent downloading service",
   "main": "dist/main.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "ts-node src/main.ts",
+    "dev": "NODE_OPTIONS=\"--loader ts-node/esm\" node src/main.ts",
     "watch": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@azure/storage-blob": "^12.0.0",
-    "webtorrent-hybrid": "^5.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "webtorrent": "^2.5.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
