--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "NODE_OPTIONS=\"--loader ts-node/esm\" node src/main.ts",
+    "dev": "NODE_OPTIONS=\"--loader ts-node/esm --no-warnings\" ts-node --esm src/main.ts",
     "watch": "tsc -w"
   },
   "keywords": [],
@@ -27,6 +27,8 @@
     "@nestjs/cli": "^10.0.0",
     "@types/node": "^20.0.0",
     "@types/webtorrent": "^0.109.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "@swc/core": "^1.3.100",
+    "@swc/helpers": "^0.5.3"
   }
 }
