--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/main.js",
   "type": "module",
   "scripts": {
+    "prebuild": "rm -rf dist",
     "build": "tsc",
     "start": "node dist/main.js",
     "dev": "NODE_OPTIONS=\"--loader ts-node/esm --no-warnings\" ts-node --esm src/main.ts",
