--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "mime-types": "^2.1.35",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typescript": "^5.0.0",
@@ -26,10 +27,11 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@swc/core": "^1.3.100",
+    "@swc/helpers": "^0.5.3",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20.0.0",
     "@types/webtorrent": "^0.109.3",
-    "ts-node": "^10.9.1",
-    "@swc/core": "^1.3.100",
-    "@swc/helpers": "^0.5.3"
+    "ts-node": "^10.9.1"
   }
 }
