--- a/package.json
+++ b/package.json
@@ -2,36 +2,19 @@
   "name": "grabr-backend",
   "version": "1.0.0",
   "description": "A torrent downloading service",
-  "main": "dist/main.js",
+  "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "prebuild": "rm -rf dist",
-    "build": "tsc",
-    "start": "node dist/main.js",
-    "dev": "NODE_OPTIONS=\"--loader ts-node/esm --no-warnings\" ts-node --esm src/main.ts",
-    "watch": "tsc -w"
+    "start": "node src/main.js",
+    "dev": "node --watch src/main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@azure/storage-blob": "^12.0.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "mime-types": "^2.1.35",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "typescript": "^5.0.0",
     "webtorrent": "^2.5.10"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@swc/core": "^1.3.100",
-    "@swc/helpers": "^0.5.3",
-    "@types/mime-types": "^2.1.4",
-    "@types/node": "^20.0.0",
-    "@types/webtorrent": "^0.109.3",
-    "ts-node": "^10.9.1"
   }
 }
